[gd_scene load_steps=6 format=3 uid="uid://bxvj5n1sfkmvw"]

[ext_resource type="Script" uid="uid://dmnu38q0peuqt" path="res://scripts/screens/rewards_die_display.gd" id="1_a3on2"]
[ext_resource type="Texture2D" uid="uid://ya4vj67lwy48" path="res://assets/ai/dice/d4.svg" id="2_eho2l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogn0h"]
bg_color = Color(0.70245534, 0.5929497, 0.12732843, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eho2l"]
bg_color = Color(0.28118682, 0.28118688, 0.2811868, 0.87058824)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="LabelSettings" id="LabelSettings_eho2l"]
font_size = 40

[node name="RewardsDieDisplay" type="Button"]
light_mask = 4
visibility_layer = 4
custom_minimum_size = Vector2(80, 80)
offset_right = 180.0
offset_bottom = 180.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_ogn0h")
theme_override_styles/hover = SubResource("StyleBoxFlat_eho2l")
script = ExtResource("1_a3on2")

[node name="FaceGrid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="DieIcon" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.392157)
show_behind_parent = true
light_mask = 0
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_eho2l")
expand_mode = 1
stretch_mode = 5

[node name="DieLabel" type="Label" parent="."]
visible = false
z_as_relative = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 129.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
text = "D4"
label_settings = SubResource("LabelSettings_eho2l")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3
text_overrun_behavior = 6
uppercase = true

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "(New)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AverageLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Avg:
4.5"
horizontal_alignment = 1
vertical_alignment = 1
